<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/btnBuscar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <!-- LinearLayout horizontal para los botones de Cámara y otro botón -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/btnCamara"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Camara" />

        <!-- Nuevo botón genérico -->
        <Button
            android:id="@+id/btnGaleria"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btnGaleria" />

        <Button
            android:id="@+id/btnMapa"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btnMapa" />
    </LinearLayout>

    <!-- ImageView para la imagen -->
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="414dp" />

    <Button
        android:id="@+id/btnCrearBase"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnCrearBase"
        android:layout_marginTop="16dp" />

    <!-- EditText para la entrada de texto -->
    <EditText
        android:id="@+id/txtComentario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/txtComentario" />

    <!-- Nuevos EditText para entrada adicional -->
    <EditText
        android:id="@+id/txtLatitudSi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/txtLatitudSi" />

    <!-- android:focusableInTouchMode="false" Desactiva la edición, no usable por ahora -->

    <EditText
        android:id="@+id/txtLongitudSi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/txtLongitudSi" />

    <!-- android:focusableInTouchMode="false" Desactiva la edición, no usable por ahora -->

    <!-- LinearLayout para el botón de ubicación y otro botón -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_marginTop="8dp">

        <Button
            android:id="@+id/btnUbicacion"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btnUbicacion" />

        <Button
            android:id="@+id/btnGuardar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btnGuadar" />
    </LinearLayout>

</LinearLayout>
